# INFT2503-CPP

./: .gitignore
Task1/: CMakeLists.txt  task_a.cpp  task_b.cpp  temperatures.txt
Task2/: CMakeLists.txt  task_1.cpp  task_2.md  task_3.md  task_4.cpp  task_5.cpp  task_6.cpp
Task3/: CMakeLists.txt  commodity.cpp  commodity.hpp  task_1.cpp  task_2.cpp  task_4.cpp
Task4/: CMakeLists.txt  task_1.cpp  task_2.cpp
Task5/: CMakeLists.txt  main.cpp
Task6/: CMakeLists.txt  task1.cpp  task2.cpp
Task7/: CMakeLists.txt  Set.cpp  Set.hpp  fraction.cpp  fraction.hpp  task1.cpp  task2.cpp
Task8/: CMakeLists.txt  task1.cpp  task2.cpp
